@@ -2,7 +2,6 @@
 $ echo 'aa' | ./gammu/gammu savesms TEXT 123465
 Saving SMS 1/1
 Saved in folder "", location -99999, SIM
-- failing tests on windows
 - move crap like following to gammu config to avoid so heavy usage of gsmstate.h header
 #ifndef GSM_USED_IRDAOBEX
 #  define GSM_USED_IRDAOBEX
